// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Root queries should get list of items 1`] = `
Object {
  "data": Object {
    "items": Array [
      Object {
        "acquirementMarketplace": null,
        "aggro": null,
        "description": "Lovingly made by a hunter's wife to keep her daughter safe from harm.",
        "gamePart": 1,
        "id": 1,
        "name": "Alette's Bracelet",
        "slug": "alettes-bracelet",
        "statStrength": 1,
      },
      Object {
        "acquirementMarketplace": true,
        "aggro": -1,
        "description": "A former skald's lightweight boots that attracted the wrong type of attention.",
        "gamePart": 2,
        "id": 53,
        "name": "Atfari's Golden Boots",
        "slug": "atfaris-golden-boots",
        "statStrength": null,
      },
    ],
  },
}
`;

exports[`Root queries should get list of items based on search query 1`] = `
Object {
  "data": Object {
    "search": Array [
      Object {
        "id": 1,
        "name": "Alette's Bracelet",
        "slug": "alettes-bracelet",
      },
    ],
  },
}
`;

exports[`Root queries should get single item 1`] = `
Object {
  "data": Object {
    "item": Object {
      "id": 1,
      "name": "Alette's Bracelet",
      "slug": "alettes-bracelet",
    },
  },
}
`;

exports[`Root queries should return empty array if search query doesn't match 1`] = `
Object {
  "data": Object {
    "search": Array [],
  },
}
`;

exports[`Root queries should return null if wrong slug got passed 1`] = `
Object {
  "data": Object {
    "item": null,
  },
}
`;
